--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
+<mat-toolbar color="primary">
+  <span class="title-center">Menadżer Sprężonego Powietrza i Kompresorów</span>
+</mat-toolbar>
+
 <nav>
   <a routerLink="/">Home</a>
   <a routerLink="/compressordetails">Szczegóły Kompresora</a>
