--- a/src/app/components/compressors-list/compressors-list.component.html
+++ b/src/app/components/compressors-list/compressors-list.component.html
@@ -7,7 +7,7 @@
   </div>
 
 
-	<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+	<table mat-table [dataSource]="dataSource" #mytable class="mat-elevation-z8">
 
   
 	<!-- Id Column -->
@@ -39,14 +39,32 @@
 	<ng-container matColumnDef="serialNumber">
         <th mat-header-cell *matHeaderCellDef> Numer Fabryczny </th>
         <td mat-cell *matCellDef="let element"> {{element.serialNumber}} </td>
-      </ng-container>
+    </ng-container>
 
 
          <!-- Year Column -->
 	<ng-container matColumnDef="yearOfManufacture">
         <th mat-header-cell *matHeaderCellDef> Rok Produkcji </th>
         <td mat-cell *matCellDef="let element"> {{element.yearOfManufacture}} </td>
-      </ng-container>
+    </ng-container>
+
+	<ng-container matColumnDef="actions">
+		<mat-header-cell *matHeaderCellDef>
+			<button mat-icon-button color="basic" (click)="openAddDialog()">
+				<mat-icon class="icon-display">note_add</mat-icon> Dodaj Kompresor
+			  </button>
+		</mat-header-cell>
+
+		<mat-cell *matCellDef="let row; let i=index;">
+			<button mat-icon-button color="accent" (click)="openEditDialog()">
+			  <mat-icon aria-label="Edit">edit</mat-icon>
+			</button>
+	
+			<button mat-icon-button color="accent" (click)="openDeleteDalog(i, row.compressorId, row.compressorName, row.serialNumber)">
+			  <mat-icon aria-label="Delete">delete</mat-icon>
+			</button>
+		  </mat-cell>
+	</ng-container>
 
 	<tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
 	<tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
