--- a/src/app/components/compressors-list/compressors-list.component.scss
+++ b/src/app/components/compressors-list/compressors-list.component.scss
@@ -4,7 +4,15 @@ table {
   }
 
 .mat-form-field {
-   font-size:  16px;
+   font-size:  12px;
    width: 100%;
    background-color: khaki;
  }
+
+ .icon-display {
+  transform: scale(0.8);
+}
+
+.mat-icon-button {
+  font-size: 12px;
+}
