--- a/src/app/dialogs/add-compressor/add-compressor.component.html
+++ b/src/app/dialogs/add-compressor/add-compressor.component.html
@@ -1,1 +1,8 @@
-<p>add-compressor works!</p>
+<h2 mat-dialog-title>Dodaj Nowy Kompresor</h2>
+<mat-dialog-content>
+    <p>dialog works</p>
+</mat-dialog-content>
+<mat-dialog-actions align="end">
+    <button mat-button mat-dialog-close mat-dialog-close = 'true'>Zatwierdź</button>
+    <button mat-button mat-dialog-close mat-dialog-close = 'false'>Anuluj</button>
+</mat-dialog-actions>
