--- a/src/app/components/compressors-list/compressors-list.component.html
+++ b/src/app/components/compressors-list/compressors-list.component.html
@@ -60,7 +60,7 @@
 			  <mat-icon aria-label="Edit">edit</mat-icon>
 			</button>
 	
-			<button mat-icon-button color="accent" (click)="openDeleteDalog(i, row.compressorId, row.compressorName, row.serialNumber)">
+			<button mat-icon-button color="accent" (click)="openDeleteDalog(i, row.id, row.compressorName, row.serialNumber)">
 			  <mat-icon aria-label="Delete">delete</mat-icon>
 			</button>
 		  </mat-cell>
